Added proof of CLuN-equivalence

--- a/primiero.bib
+++ b/primiero.bib
@@ -3373,6 +3373,42 @@
   bibfiles = {dirk,papers}
 }
 
+@article{Batens:LogiqueAnalyse:1980,
+  author = {Batens, Diderik},
+  title = {Paraconsistent Extensional Propositional Logics},
+  journal = {Logique \& Analyse},
+  uuid = {47A6ACC4-EB52-4582-953F-BF6A8EF04F4B},
+  volume = {23},
+  number = {90-91},
+  pages = {195-234},
+  year = {1980},
+  url = {},
+  source_app = {EndNote},
+  EndNote_reference_number = {643},
+  label = {Bat80},
+  Secondary_title = {Logique \&amp; Analyse},
+  Citation_identifier = {Batens 1980},
+  publicationStatus = {Unknown}
+}
+
+@incollection{Batens:ParaconsistentLogicEssaysOnTheInconsistent:1989,
+  author = {Batens, Diderik},
+  editor = {Priest, Graham  and Routley, Richard  and Norman, J.},
+  title = {Dynamic Dialectical Logics},
+  booktitle = {Paraconsistent Logic - Essays on the inconsistent},
+  uuid = {A744C9F0-4D91-44DB-BE60-D52B4EB47A01},
+  pages = {187-217},
+  publisher = {Philosophia Verlag},
+  address = {München / Hamden / Wien},
+  year = {1989},
+  url = {},
+  source_app = {EndNote},
+  EndNote_reference_number = {52},
+  label = {Bat89},
+  Citation_identifier = {Batens 1989},
+  publicationStatus = {Unknown}
+}
+
 @ARTICLE{D:p&rl,
   author = {Diderik Batens},
   title = {Paraconsistente en relevante logica's},
