--- a/note1.tex
+++ b/note1.tex
@@ -178,7 +178,7 @@ We present a multi-conclusion natural deduction calculus based on minimal logic 
 
 In this paper we outline a multiple-conclusion natural deduction calculus in which the dynamics of standard (Fitch-style) dynamic proofs of Adaptive Logics \cite{batens07} can be reconstructed. Adaptive logics are a family of logics that can be used to formalise a wide range of defeasible reasoning forms. Their consequence-relations rely on the standard idea of interpreting premises as normally as possible through the selection of models of its premises, but it is only at the level of its proof-theory that its distinctive approach comes to the fore. Adaptive logics, namely, reconstruct defeasible reasoning patterns as dynamic proofs; proofs in which steps performed earlier may later be retracted when the assumptions they were based on no longer hold.
 
-The specific system we describe here is for an inconsistency adaptive logic: this is a logic that captures the paraconsistent reasoning performed to avoid triviality in the face of inconsistency, while trying to make up for its deductive weakness by provisionally applying classical inference-rules when there is no explicit indication that inconsistencies are involved in that inference. This choice brings us closer to the original motivations for the development of adaptive logic, but also allows us to engage with current philosophical debates of relevance to Priest's work.
+The specific system we describe here is for an inconsistency adaptive logic: this is a logic that captures the paraconsistent reasoning performed to avoid triviality in the face of inconsistency, while trying to make up for its deductive weakness by provisionally applying classical inference-rules when there is no explicit indication that inconsistencies are involved in that inference. This choice brings us closer to the original motivations for the development of adaptive logic \cite{Batens:ParaconsistentLogicEssaysOnTheInconsistent:1989}, but also allows us to engage with current philosophical debates of relevance to Priest's work.
 
 The dynamics of retracting earlier lines in a proof can be captured in a rather natural way in linear proof-formats, including standard axiomatic and Fitch-style natural deduction proofs, but is much less straightforward in a tree-like proof-format. Consider, for instance, the following retraction in an application of \emph{Ex Contradictione Quodlibet}:
 
@@ -209,11 +209,11 @@ Contrast this, now, with the following attempt to reconstruct a similar reasonin
     \BinaryInfC{$\Gamma \vdash p \wedge \neg p$}
     \BinaryInfC{?}
 \end{prooftree}
-When the proof an explicit contradiction is derived in the right-hand branch, the assumption of its invalidity (stated explicitly in the left-hand branch) no longer holds. In this format, however, the order used to construct the proof cannot be read off the proof itself (an issue that could easily be fixed). But also, more importantly, it isn't even clear what it might mean to retract the line where $q$ is derived, since the result of removing that line from the proof is in itself no longer a well-formed proof.
+When in this proof an explicit contradiction is derived in the right-hand branch, the assumption of its invalidity (stated explicitly in the left-hand branch) no longer holds. In this format, however, the order used to construct the proof cannot be read off the proof itself (an issue that could easily be fixed). But also, more importantly, it isn't even clear what it might mean to retract the line where $q$ is derived, since the result of removing that line from the proof is in itself no longer a well-formed proof.
 
 The proof-format we propose solves this problem by making two changes: first, we add indices to judgements to keep track of stages in the construction of a proof; and second, we exploit the fact that judgements that are `marked' at a certain stage do not have to be removed, because there is simply no need to prevent their implicit re-use since every assumption or premise should explicitly be written down in the place it is used. Instead, it is the derivation of the same judgement at a later stage that is (or may be) blocked, because the original assumption that led to its initial derivation probably no longer holds. We therefore provide, for the first time, an appropriate Natural Deduction translation of adaptive reasoning, whose proofs have been so far always been presented in their linear format. 
 
-Because this system uses multiple-conclusion judgements, it also explicitly captures the connection between unconditional derivations of certain disjunctions in the paraconsistent logic and the conditional deductions of one of their disjuncts in the adaptive logic. This formal feature can be used to re-assess certain current debates on how one should best approach the question of \textit{classical recapture} in paraconsistent logics. The latter problem can be summarised as follows. When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic, this question is often deemed urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. It is also a response that Graham has endorsed. His specific proposal on how this should be implemented has, in recent years, become the focus of a renewed interest in the problem of how dialetheists should account for classical recapture.
+Because this system uses multiple-conclusion judgements, it also explicitly captures the connection between unconditional derivations of certain disjunctions in the paraconsistent logic and the conditional deductions of one of their disjuncts in the adaptive logic. This formal feature can be used to re-assess certain current debates on how one should best approach the question of \textit{classical recapture} in paraconsistent logics. The latter problem can be summarised as follows. When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic, this question is often deemed urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. It is also a response that Graham has endorsed \cite{GP:LPm}. His specific proposal on how this should be implemented has, in recent years, become the focus of a renewed interest in the problem of how dialetheists should account for classical recapture. We contend that the combination of a multiple-conclusion calculus with the reconstruction of the defeasible dynamics of adaptive proofs can further clarify this debate.
 
 %When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic, this question is often deemed urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. This is the problem of \emph{classical recapture}. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provide a general framework in which many types of defeasible inference-forms can be rigourously formalised.
 
@@ -242,7 +242,7 @@ The paper is structured as follows. We introduce in Section \ref{sec:lower} a ba
 
 We start by defining the type universe for the $\{\neg, \rightarrow, \wedge, \vee\}$ fragment of intuitionistic propositional logic corresponding to minimal logic. We call this logic {\sf minimalND} and use it as the equivalent of a Lower Limit Logic---the paraconsistent logic that governs the unconditional steps in a proof. Contrary to what is standard in an intuitionistic setting, we do not allow the deduction of $\bot$ from an explicit contradiction. Whereas $\bot$ can be eliminated via \emph{Ex Falso Quodlibet}, there is no introduction-rule for $\bot$ and this is what makes our base-logic paraconsistent. It is only when the assumption of consistency is introduced that the connection between negation-inconsistency and absolute inconsistency can provisionally be recreated.
 
-We start defining the syntax of our language:
+We start by defining the syntax of our language:
 
 \begin{definition}[{\sf minimalND}]
 
@@ -368,9 +368,12 @@ The semantics of connectives is given in the standard proof-theoretical way by w
 
 Finally, we introduce  in Figure \ref{fig:structural} a set of rules to enforce structural properties.  {\sf Wleft} is a Weakening on the left-hand side of the judgement: it allows the monotonic extension of assumptions preserving already derivable formulas. Notice that this rule can only work with a strictly empty set of formulas $; \cdot$ following $\Gamma$: we shall introduce in the next section this as the set of \textit{adaptive conditions}. The reason for this requirement in {\sf Wleft} is that the set of adaptive conditions strictly depends on the set of assumptions $\Gamma$, hence a Weakening of the latter can imply a different formulation of the former. We do not need to formulate a {\sf Wright} rule for weakening of the set $\Delta$ of derivable formulas, as this can be obtained by a detour of $\vee$-Introduction and Elimination. {\sf Cleft} for Contraction on the left allows elimination of repeated assumptions and {\sf Eleft} for Exchange on the left is valid just by set construction, as there is no order. {\sf Cright} and {\sf Eright} do a similar job on the right-hand side of the judgement. Finally, {\sf Cut} (also known as {\sf Substitution} in some Natural Deduction Caluli) guarantees that derivations can be pasted together, and it in generals requires that there are no clashes of free variables in $\Gamma, \Gamma'$.
 
-The resulting system is one where the negation $\neg$ is paraconsistent (in virtue of the absence of an elimination-rule) but not paracomplete, as the proof of excluded middle in Figure \ref{fig:exclmid} shows.
+The resulting system is equivalent to the propositional fragment of \textbf{CLuN}, the logic obtained by adding excluded middle to the positive fragment of classical logic. This is a very weak paraconsistent (but not paracomplete) logic that does not validate any of the usual De Morgan rules \cite{Batens:LogiqueAnalyse:1980}, and has been used as the Lower Limit Logic of one of the first adaptive logics.
 
-\begin{figure}[h!]
+\begin{theorem}
+    {\sf minimalND} is sound and complete w.r.t. to the propositional fragment of \textbf{CLuN}.
+\end{theorem}
+\noindent\textsl{Proof.} Soundness can be verified as usual, with the key step verifying that ($\neg$I) is sound in view of the completeness-clause for negation (if $\phi$ is False, then $\neg \phi$ is True). Completeness follows from the provability of all \textbf{CLuN}-axioms. Below, we only give the proofs for excluded middle and Peirce's Law.
     \begin{mathpar}
     \infer*[left=Cright]
         {\infer*[right=$\vee$I]
@@ -378,15 +381,30 @@ The resulting system is one where the negation $\neg$ is paraconsistent (in virt
                 {\infer*[right=$\neg$I]
                     {\infer*[left=Axiom]
                         { }
-                        {\Turn {\phi; \cdot} {\phi}}}
-                    {\Turn {\emptyset; \cdot} {\phi, \neg \phi}}}
-                {\Turn {\emptyset; \cdot} {\phi \vee \neg \phi, \neg \phi}}}
-            {\Turn {\emptyset; \cdot} {\phi \vee \neg \phi, \phi \vee \neg \phi}}}
-        {\Turn {\emptyset; \cdot} {\phi \vee \neg \phi}}
-    \end{mathpar}
-    \caption{Excluded Middle}\label{fig:exclmid}
-\end{figure}
+                        {\TurnOne {p; \cdot} {p}}}
+                    {\TurnTwo {\emptyset; \cdot} {p, \neg p}}}
+                {\TurnThree {\emptyset; \cdot} {p \vee \neg p, \neg p}}}
+            {\TurnFour {\emptyset; \cdot} {p \vee \neg p, p \vee \neg p}}}
+        {\TurnFive {\emptyset; \cdot} {p \vee \neg p}}
 
+    \and
+
+    \infer*[right=$\to$I]
+        {\infer*[right=Cright]
+            {\infer*[right=$\to$E]
+                {\infer*[left=$\to$I]
+                    {\infer*[left=$\vee$I $\vee$E]
+                        {\TurnOne {p} {p}}
+                        {\TurnTwo {p} {p, q}}}
+                    {\TurnThree { } {p, p \to q}} \\
+                \infer*[right=Prem]
+                    { }
+                    {\TurnFour {(p \to q) \to p} {(p \to q) \to p}}}
+                {\TurnFive {(p \to q) \to p} {p, p}}}
+            {\TurnSix {(p \to q) \to p} {p}}}
+        {\TurnSeven { } {((p \to q) \to p) \to  p}}
+    \end{mathpar}
+\qed
 % % % %NOT DONE THIS
 
 %
