--- a/primiero.bib
+++ b/primiero.bib
@@ -3430,7 +3430,7 @@
 }
 
 @ARTICLE{batens07,
-  author = {D. Batens},
+  author = {Diderik Batens},
   title = {A Universal Logic Approach to Adaptive Logics},
   journal = {Logica universalis},
   year = {2007},
@@ -3478,7 +3478,7 @@
 }
 
 @ARTICLE{batens01,
-  author = {D. Batens},
+  author = {Diderik Batens},
   title = {A General Characterization of Adaptive Logics},
   journal = {Logique \& Analyse},
   year = {2001},
