--- a/note1.tex
+++ b/note1.tex
@@ -866,7 +866,7 @@ $Sf(\Gamma)=\bigcup_{\phi \in \Gamma} \{\psi \mid \psi$ is a subformula of $ \ph
 \end{definition}
 
 
-From $Sf(\Gamma)$ we the construe all the possible abnormalities which can be obtained by its members:
+From $Sf(\Gamma)$ we then construe all the possible abnormalities which can be obtained by its members:
 
 \begin{definition}[Abnormalities relevant to the premise set]
 $\Omega(\Gamma)=\{\psi\wedge \neg \psi \mid \psi\in Sf(\Gamma)\}$.
