--- a/note1.tex
+++ b/note1.tex
@@ -165,6 +165,8 @@ Middlesex University London\\
  \and Patrick Allo\\
  Oxford Internet Institute\\
  University of Oxford}
+\date{}
+
 
 \begin{document}
 
@@ -188,7 +190,7 @@ The dynamics of retracting earlier lines in a proof can be captured in a rather 
         (1) & $p$ & Prem & $\emptyset$\\
         (2) & $p \vee q$ & Addition & $\emptyset$\\
         (3) & $\neg p$ & Prem & $\emptyset$\\
-        (4) & $q$ & DS & $\{p\}$ & \checkmark$^5$\\
+        (4) & $q$ & DS & $\{p\}$ & $\XBox^5$\\
         (5) & $p \wedge \neg p$ & Adjunction & $\emptyset$
     \end{tabular}
 \end{figure}
